--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongoose": "^5.0.16",
     "morgan": "^1.9.0"
   }
 }
